--- a/public/styles/additional.css
+++ b/public/styles/additional.css
@@ -24,6 +24,7 @@
     border-radius: 5px;
     width: 100%;
     height: 100%;
+    object-fit: contain;
 }
 
 .tags-block {
@@ -92,6 +93,7 @@
     border-radius: 5px;
     width: 100%;
     height: 100%;
+    object-fit: contain;
 }
 .filemanager-download {
     width: 100%;
