--- a/public/styles/additional.css
+++ b/public/styles/additional.css
@@ -30,6 +30,7 @@
 .tags-block {
     padding: 10px 0;
     display: flex;
+    flex-wrap: wrap;
     gap: 10px;
     cursor: pointer;
 }
@@ -37,6 +38,42 @@
 .tag-item {
     padding: 5px 10px;
     border-radius: 5px
+}
+
+.tag-btn {
+    padding: 0;
+    border: none;
+    font: inherit;
+    color: inherit;
+    transition: opacity .3s ease-in;
+}
+.tag-btn.btn-left{
+    border-radius: 5px 0 0 5px;
+}
+.tag-btn.btn-right {
+    border-radius: 0 5px 5px 0;
+}
+.main-tags-page-item {
+    position: relative;
+    padding: 5px 10px;
+    border-radius: 5px
+}
+.tag-item__edit-block{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    opacity: .8;
+    justify-content: space-evenly;
+}
+.main-tags-page-item:hover .tag-item__edit-block {
+    display: flex;
+}
+
+.tag-item__edit-block button {
+    flex-grow: 1;
 }
 
 .modal-header-control {
@@ -156,4 +193,6 @@
     top: 0;
     background: rgba(255,255,255,.3);
 }
+
+
 
