--- a/public/styles/additional.css
+++ b/public/styles/additional.css
@@ -1,3 +1,8 @@
+
+.image {
+    width: 100%;
+    height: 100%;
+}
 .required:after{
     content: '*';
     color: red;
@@ -181,7 +186,7 @@
     position: relative;
 }
 
-#post-image-change {
+#image-change {
     display: flex;
     position: absolute;
     width: 100%;
@@ -203,6 +208,32 @@
 .user-image-cell {
     display: flex;
     justify-content: center;
+}
+
+.gallary-images-block {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+.gallary-images-block .gallary {
+    vertical-align: bottom;
+    width: 150px;
+    height: 150px;
+}
+.gallary-add-button {
+    width: 150px;
+    height: 150px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+/*.gallary-add-button button {*/
+/*    width: 50px;*/
+/*    height: 50px;*/
+/*    font-size: 25px;*/
+/*}*/
+.gallary-block .image {
+    border-radius: 5px;
 }
 
 
